--- a/LATEX/neurips_2024.tex
+++ b/LATEX/neurips_2024.tex
@@ -600,7 +600,7 @@ This study investigates the application of machine learning techniques for predi
 
 \appendix
 
-\section{Appendix / supplemental material}
+\section{Appendix}
 
 \renewcommand{\thetable}{A.\arabic{table}}
 \setcounter{table}{0}
